fixed list spacing bug

--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -3494,3 +3494,7 @@ ul.footer-info li,ul.footer-places li {
 .figureleft img {width:100%; margin-left: auto; margin-right: auto;}
 .figureright img {width:100%; margin-left: auto; margin-right: auto;}
 .figurecaption {font-size: 14px;line-height:16px;padding-top: 4px;padding-left: 3px;font-family:Sylfaen;color:#a8a8a8}
+
+.spacedlist {
+    padding-inline-start: 18px;
+}
